array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  
  var nbils = 0
  var n = 0
  
  for (n <- 1 to (lenght(num)-1) {
    if (num(n) > num(n+1)) {
      nbils += 1
    }
  }
  
  
  
  
}